--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://mern-ecom123:mern-ecom123@mern-ecommerce.ksbpm.mongodb.net/ecom?retryWrites=true&w=majority
+MONGO_URI = 
 JWT_SECRECT_KEY = iamthesecret
 JWT_EXPIRATION = 360000
-SALT_ROUNDS = 12
-CLIENT_URL= https://ecommerce-bd.netlify.app/
+CLIENT_URL= 
 NODE_ENV=Developement
